chandeliers-lus/tests/compile_fail/ui/clk/bad-binding.stderr
error: Two subexpressions have different clocks: 'when b1 and 'when b2 are incompatible
  --> tests/compile_fail/ui/clk/bad-binding.rs:11:9
   |
11 |         _n = 1 when b2;
   |         ^^^^^^^^^^^^^^
   |
note: This is clocked by 'when b1
  --> tests/compile_fail/ui/clk/bad-binding.rs:11:9
   |
11 |         _n = 1 when b2;
   |         ^^
note: defined here
  --> tests/compile_fail/ui/clk/bad-binding.rs:7:23
   |
7  |         _n : int when b1;
   |                       ^^
note: This is clocked by 'when b2
  --> tests/compile_fail/ui/clk/bad-binding.rs:11:14
   |
11 |         _n = 1 when b2;
   |              ^^^^^^^^^
note: defined here
  --> tests/compile_fail/ui/clk/bad-binding.rs:11:21
   |
11 |         _n = 1 when b2;
   |                     ^^
   = note: some operations (notably assignment) have stricter requirements than others on clock equality
   = note: you may need to insert a `when` operator
